VM: Use long instead of Amount for gas/gasPrice
