# src/main/java/org/semux/api/v2/SemuxApiImpl.java
@@ -731,18 +731,17 @@ public final class SemuxApiImpl implements SemuxApi {
     }
 
     @Override
-    public Response create(String from, String value, String data, String gasPrice, String gasLimit, String fee,
+    public Response create(String from, String value, String data, String gasPrice, String gas, String fee,
             String nonce, Boolean validateNonce) {
         return doTransaction(TransactionType.CREATE, from, null, value, fee, nonce, validateNonce, data, gasPrice,
-                gasLimit);
+                gas);
     }
 
     @Override
-    public Response call(String from, String to, String value, String gasPrice, String gasLimit, String fee,
-            String nonce,
-            Boolean validateNonce, String data) {
+    public Response call(String from, String to, String value, String gasPrice, String gas, String fee,
+            String nonce, Boolean validateNonce, String data) {
         return doTransaction(TransactionType.CALL, from, to, value, fee, nonce, validateNonce, data, gasPrice,
-                gasLimit);
+                gas);
     }
 
     @Override
@@ -891,7 +890,7 @@ public final class SemuxApiImpl implements SemuxApi {
      * @return
      */
     private Response doTransaction(TransactionType type, String from, String to, String value, String fee, String nonce,
-            Boolean validateNonce, String data, String gasPrice, String gasLimit) {
+            Boolean validateNonce, String data, String gasPrice, String gas) {
         DoTransactionResponse resp = new DoTransactionResponse();
         try {
             TransactionBuilder transactionBuilder = new TransactionBuilder(kernel)
@@ -902,7 +901,7 @@ public final class SemuxApiImpl implements SemuxApi {
                     .withFee(fee, true)
                     .withData(data);
             if (type == TransactionType.CREATE || type == TransactionType.CALL) {
-                transactionBuilder.withGasPrice(gasPrice).withGasLimit(gasLimit);
+                transactionBuilder.withGasPrice(gasPrice).withGas(gas);
             }
 
             if (nonce != null) {
